2008-01-16 Benny Malengier <benny.malengier@gramps-project.org>
	* configure.in: don't make help makefile
	* src/FilterEditor/_ShowResults.py: shorten text, bug 1609

2008-01-16 Benny Malengier <benny.malengier@gramps-project.org>
	* src/GrampsDbUtils/_GrampsDbWriteXML.py: import gzip only once

2008-01-16  Peter Landgren <peter.talken@telia.com>
    * man/Makefile.am: Swedish added (sv).
    * man/sv/gramps.1.in: Added Swedish man page (sv).
    * man/sv/Makefile.am: Added Swedish man page (sv).
    * man/fr/gramps.1.in: got the French man page back, which I overwrote yesterday

2008-01-15  Raphael Ackermann <raphael.ackermann@gmail.com>
	* src/docgen/Makefile.am: added line to copy gtkprintpreview.glade
	on distcheck.

2008-01-15  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/OnThisDay.py: date sortable
	* src/plugins/SameSurnames.py: date sortable
	* src/plugins/siblings.py: date sortable
	* src/Simple/_SimpleAccess.py: simple method to get date_obj
	* src/Simple/_SimpleTable.py: manual override of link_col;
	removed call to quick_reports (could have been recursive)

2008-01-15  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/PluginUtils/_Tool.py (Tool.__init__): pass in dbstate
	* src/PluginUtils/__init__.py (MenuToolOptions.__init__): 
	pass in dbstate
	* src/plugins/Calendar.py (CalendarOptions.add_menu_options): 
	standard defaults
	
2008-01-15 Benny Malengier <benny.malengier@gramps-project.org>
	* src/GrampsDbUtils/_GrampsDbWriteXML.py: import gzip

2008-01-15  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/SameSurnames.py (IncompleteSurname.apply): 
	can bring up people with empty surname

2008-01-15  Raphael Ackermann <raphael.ackermann@gmail.com>
    * src/FilterEditor/_ShowResults.py: allow notes to be filtered
    0001607: Unreferenced filter test

2008-01-15  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/ImportCSV.py (CSVParser.process): fixed csv import with 
	no surname (bug #1603)
